# AUTONOMOUS-NAVIGATION-SYSTEM-BASED-ON-2D-LiDAR-SLAM

./: .gitmodules  README.md  frames_2025-01-21_04.13.07.gv
bumperbot_bringup/: package.xml
bumperbot_bringup/config/: ldlidar_config.yaml
bumperbot_bringup/launch/: real_robot.launch.py  test.launch..py
bumperbot_controller/: CMakeLists.txt  package.xml
bumperbot_controller/config/: joy_config.yaml
bumperbot_cpp_examples/: CMakeLists.txt
bumperbot_description/: package.xml
bumperbot_firmware/: package.xml
bumperbot_firmware/firmware/robot_control/: robot_control.ino
bumperbot_localization/: CMakeLists.txt  package.xml
bumperbot_localization/bumperbot_localization/: odometry_motion_model.py
bumperbot_mapping/: package.xml
bumperbot_mapping/config/: slam_toolbox_optimized.yaml
bumperbot_mapping/launch/: slam.launch.py  slam_real.launch.py
bumperbot_utils/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.sh
ldlidar_sl_ros2/launch/: ld14.launch.py  ld14p.launch.py
log/: latest_build  latest_list
src/bumperbot_bringup/: package.xml
src/bumperbot_bringup/launch/: simulated_robot.launch.py
src/bumperbot_controller/: CMakeLists.txt
src/bumperbot_controller/config/: joy_teleop.yaml
src/bumperbot_controller/launch/: joystick_teleop.launch.py
src/bumperbot_cpp_examples/: package.xml
src/bumperbot_cpp_examples/src/: simple_publisher.cpp
src/bumperbot_localization/: CMakeLists.txt  package.xml
src/bumperbot_mapping/: CMakeLists.txt  package.xml
src/bumperbot_msgs/: CMakeLists.txt
(+79 files in other folders)
